add single news and pilot

--- a/news.html
+++ b/news.html
@@ -319,17 +319,22 @@
                             <div class="container-fluid">
                                 <div class="row">
                                     <div class="col-lg-8">
-                                        <img src="img/news-1.jpg" class="img-fluid">
+                                        <a href="single-news.html">
+                                            <img src="img/news-1.jpg" class="img-fluid">
+                                        </a>
                                     </div>
                                     <div class="col-lg-4">
                                         <h5>FUNFACT</h5>
                                         <p style="font-size: 1vw">25 Jan 2022 by Lorem Ipsum</p>
-                                        <h4>JUDUL ARTIKEL</h4>
+                                        <a href="single-news.html">
+                                            <h4>JUDUL ARTIKEL</h4>
+                                        </a>
                                         <p style="position: absolute; bottom: 0">
                                             Lorem ipsum dolor sit amet,
                                             consectetuer adipiscing elit,
                                             sed diam nonummy nibh
-                                            euismod tincidunt ut.</p>
+                                            euismod tincidunt ut.
+                                        </p>
                                     </div>
                                 </div>
                             </div>
@@ -344,45 +349,60 @@
                             <div class="pb-3 container-fluid">
                                 <div class="row">
                                     <div class="col-lg-6 reveal fade-bottom">
-                                        <img src="img/news-1.jpg" class="img-fluid">
+                                        <a href="single-news.html">
+                                            <img src="img/news-1.jpg" class="img-fluid">
+                                        </a>
                                         <div class="news-item-detail mb-5">
                                             <p style="font-size: 1vw;"><strong style="color:#000">KATEGORI BERITA
                                                 </strong>18 Jan 2022 by Lorem Ipsum</p>
-                                            <h4>JUDUL ARTIKEL LOREM IPSUM DOLOR SIT
-                                                AMET, CONSECTETUER</h5>
+                                            <a href="single-news.html">
+                                                <h4>JUDUL ARTIKEL LOREM IPSUM DOLOR SIT
+                                                    AMET, CONSECTETUER</h5>
+                                            </a>
                                         </div>
                                     </div>
                                     <div class="col-lg-6 reveal fade-bottom">
-                                        <img src="img/news-1.jpg" class="img-fluid">
+                                        <a href="single-news.html">
+                                            <img src="img/news-2.jpg" class="img-fluid">
+                                        </a>
                                         <div class="news-item-detail mb-5">
                                             <p style="font-size: 1vw;"><strong style="color:#000">KATEGORI BERITA
                                                 </strong>18 Jan 2022 by Lorem Ipsum</p>
-                                            <h4>JUDUL ARTIKEL LOREM IPSUM DOLOR SIT
-                                                AMET, CONSECTETUER</h5>
+                                            <a href="single-news.html">
+                                                <h4>JUDUL ARTIKEL LOREM IPSUM DOLOR SIT
+                                                    AMET, CONSECTETUER</h5>
+                                            </a>
                                         </div>
                                     </div>
                                     <div class="col-lg-6 reveal fade-bottom">
-                                        <img src="img/news-1.jpg" class="img-fluid">
+                                        <a href="single-news.html">
+                                            <img src="img/news-3.jpg" class="img-fluid">
+                                        </a>
                                         <div class="news-item-detail mb-5">
                                             <p style="font-size: 1vw;"><strong style="color:#000">KATEGORI BERITA
                                                 </strong>18 Jan 2022 by Lorem Ipsum</p>
-                                            <h4>JUDUL ARTIKEL LOREM IPSUM DOLOR SIT
-                                                AMET, CONSECTETUER</h5>
+                                            <a href="single-news.html">
+                                                <h4>JUDUL ARTIKEL LOREM IPSUM DOLOR SIT
+                                                    AMET, CONSECTETUER</h5>
+                                            </a>
                                         </div>
                                     </div>
                                     <div class="col-lg-6 reveal fade-bottom">
-                                        <img src="img/news-1.jpg" class="img-fluid">
+                                        <a href="single-news.html">
+                                            <img src="img/news-1.jpg" class="img-fluid">
+                                        </a>
                                         <div class="news-item-detail mb-5">
                                             <p style="font-size: 1vw;"><strong style="color:#000">KATEGORI BERITA
                                                 </strong>18 Jan 2022 by Lorem Ipsum</p>
-                                            <h4>JUDUL ARTIKEL LOREM IPSUM DOLOR SIT
-                                                AMET, CONSECTETUER</h5>
+                                            <a href="single-news.html">
+                                                <h4>JUDUL ARTIKEL LOREM IPSUM DOLOR SIT
+                                                    AMET, CONSECTETUER</h5>
+                                            </a>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
             </section>
         </main>
 
@@ -466,7 +486,7 @@
     <!-- UIkit JS -->
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.13.1/dist/js/uikit.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.13.1/dist/js/uikit-icons.min.js"></script>
-    
+
     <script src="js/script.js"></script>
 
 </body>
