--- a/single-news.html
+++ b/single-news.html
@@ -235,156 +235,58 @@
         </header>
 
         <main id="main" class="main">
-            <section class="py-3 first-section-about" style="margin-bottom: -4vw !important">
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <div class="tabs">
-                                <ul class="nav nav-tabs">
-                                    <li class="nav-item">
-                                        <a class="nav-link active" href="#published" data-bs-toggle="tab">Published
-                                            Titles</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#pilot" data-bs-toggle="tab">Pilot Titles</a>
-                                    </li>
-                                </ul>
-                                <div class="tab-content">
-                                    <div id="published" class="tab-pane active">
-                                        <div class="container-fluid">
-                                            <div class="row">
-                                                <div class="my-5 col-lg-12 col-yellow">
-                                                    <div class="catalog-item-wrap reveal fade-left">
-                                                        <span class="catalog-title">CODE<br>HELIX</span>
-                                                        <span class="catalog-author">by Nikki Dibya Wardhana,<br>Bryan
-                                                            Arfiandy</span>
-                                                        <button class="btn btn-black" type="button">
-                                                            <a href="single-published.html">
-                                                                More Info <span class="glyphicon glyphicon-play"></span>
-                                                            </a>
-                                                        </button>
-                                                    </div>
-                                                    <div class="catalog-img-wrap reveal fade-right">
-                                                        <img src="img/catalog-2.png">
-                                                    </div>
-                                                </div>
-                                                <div class="my-5 col-lg-12 col-yellow">
-                                                    <div class="catalog-item-wrap reveal fade-left">
-                                                        <span class="catalog-title">LOREM<br>IPSUM DOLOR</span>
-                                                        <span class="catalog-author">by Lorem Ipsum</span>
-                                                        <button class="btn btn-black" type="button">
-                                                            <a href="single-published.html">
-                                                                More Info <span class="glyphicon glyphicon-play"></span>
-                                                            </a>
-                                                        </button>
-                                                    </div>
-                                                    <div class="catalog-img-wrap reveal fade-right">
-                                                        <img src="img/catalog-1.png">
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div id="pilot" class="tab-pane">
-                                        <div class="container-fluid reveal fade-bottom">
-                                            <div class="row">
-                                                <div class="col-lg-3">
-                                                    <a href="single-pilot.html">
-                                                        <div class="pilot-post col-yellow">
-                                                            <img src="img/pilot-2.png">
-                                                        </div>
-                                                        <div class="pilot-title-wrap">
-                                                            <p class="title">lorem ipsum</p>
-                                                            <p class="author">by lorem </p>
-                                                        </div>
-                                                    </a>
-                                                </div>
-                                                <div class="col-lg-3">
-                                                    <a href="single-pilot.html">
-                                                        <div class="pilot-post col-yellow">
-                                                            <img src="img/pilot-2.png">
-                                                        </div>
-                                                        <div class="pilot-title-wrap">
-                                                            <p class="title">lorem ipsum</p>
-                                                            <p class="author">by lorem </p>
-                                                        </div>
-                                                    </a>
-                                                </div>
-                                                <div class="col-lg-3">
-                                                    <a href="single-pilot.html">
-                                                        <div class="pilot-post col-yellow">
-                                                            <img src="img/pilot-2.png">
-                                                        </div>
-                                                        <div class="pilot-title-wrap">
-                                                            <p class="title">lorem ipsum</p>
-                                                            <p class="author">by lorem </p>
-                                                        </div>
-                                                    </a>
-                                                </div>
-                                                <div class="col-lg-3">
-                                                    <a href="single-pilot.html">
-                                                        <div class="pilot-post col-yellow">
-                                                            <img src="img/pilot-2.png">
-                                                        </div>
-                                                        <div class="pilot-title-wrap">
-                                                            <p class="title">lorem ipsum</p>
-                                                            <p class="author">by lorem </p>
-                                                        </div>
-                                                    </a>
-                                                </div>
-                                                <div class="col-lg-3">
-                                                    <a href="single-pilot.html">
-                                                        <div class="pilot-post col-yellow">
-                                                            <img src="img/pilot-2.png">
-                                                        </div>
-                                                        <div class="pilot-title-wrap">
-                                                            <p class="title">lorem ipsum</p>
-                                                            <p class="author">by lorem </p>
-                                                        </div>
-                                                    </a>
-                                                </div>
-                                                <div class="col-lg-3">
-                                                    <a href="single-pilot.html">
-                                                        <div class="pilot-post col-yellow">
-                                                            <img src="img/pilot-2.png">
-                                                        </div>
-                                                        <div class="pilot-title-wrap">
-                                                            <p class="title">lorem ipsum</p>
-                                                            <p class="author">by lorem </p>
-                                                        </div>
-                                                    </a>
-                                                </div>
-                                                <div class="col-lg-3">
-                                                    <a href="single-pilot.html">
-                                                        <div class="pilot-post col-yellow">
-                                                            <img src="img/pilot-2.png">
-                                                        </div>
-                                                        <div class="pilot-title-wrap">
-                                                            <p class="title">lorem ipsum</p>
-                                                            <p class="author">by lorem </p>
-                                                        </div>
-                                                    </a>
-                                                </div>
-                                                <div class="col-lg-3">
-                                                    <a href="single-pilot.html">
-                                                        <div class="pilot-post col-yellow">
-                                                            <img src="img/pilot-2.png">
-                                                        </div>
-                                                        <div class="pilot-title-wrap">
-                                                            <p class="title">lorem ipsum</p>
-                                                            <p class="author">by lorem </p>
-                                                        </div>
-                                                    </a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+            <section style="height: 50vh; width: 100%; background-image : url(img/news-1.jpg)">
+            </section>
+            <section class="py-5">
+                <div class="container">
+                    <article class="text-justify">
+
+                        <div class="single-news-title mb-5">
+
+                            <p style="font-weight: bold; color: #000; margin: 10px">
+                                KATEGORI BERITA
+                            </p>
+                            <p style="font-weight: normal; color: #4d4d4d; margin: 10px">
+                                12 April 2022
+                            </p>
+
                         </div>
-                    </div>
+                        <h3 class="text-center">
+                            JUDUL ARTIKEL
+                        </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam iaculis nunc
+                            tortor, sed condimentum nibh aliquet a. Aliquam et aliquam massa, et
+                            ullamcorper nibh. Mauris nec sapien non lectus mattis vulputate et ac lacus.
+                            Maecenas pellentesque faucibus tincidunt. Proin quam dolor, ultricies ac
+                            augue ut, scelerisque aliquam justo. Praesent neque mi, pellentesque eget
+                            massa ac, lobortis pellentesque dui. Suspendisse consectetur lacinia
+                            ullamcorper. Quisque tristique mauris tortor, sit amet laoreet enim
+                            facilisis id. Cras malesuada vehicula urna, et maximus nisi tincidunt nec.
+                            Proin ante augue, congue non viverra sed, consequat elementum arcu. Fusce
+                            vitae dui augue.
+                        </p>
+
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam iaculis nunc
+                            tortor, sed condimentum nibh aliquet a. Aliquam et aliquam massa, et
+                            ullamcorper nibh. Mauris nec sapien non lectus mattis vulputate et ac lacus.
+                            Maecenas pellentesque faucibus tincidunt. Proin quam dolor, ultricies ac
+                            augue ut, scelerisque aliquam justo. Praesent neque mi, pellentesque eget
+                            massa ac, lobortis pellentesque dui. Suspendisse consectetur lacinia
+                            ullamcorper. Quisque tristique mauris tortor, sit amet laoreet enim
+                            facilisis id. Cras malesuada vehicula urna, et maximus nisi tincidunt nec.
+                            Proin ante augue, congue non viverra sed, consequat elementum arcu. Fusce
+                            vitae dui augue.                            
+                        </p>
+                        <p>
+                            <img src="img/news-3.jpg">
+                        </p>
+                    </article>
+
                 </div>
             </section>
+
         </main>
 
         <footer id="footer" class="footer-texts-more-lighten">
