--- a/single-pilot.html
+++ b/single-pilot.html
@@ -235,156 +235,114 @@
         </header>
 
         <main id="main" class="main">
-            <section class="py-3 first-section-about" style="margin-bottom: -4vw !important">
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <div class="tabs">
-                                <ul class="nav nav-tabs">
-                                    <li class="nav-item">
-                                        <a class="nav-link active" href="#published" data-bs-toggle="tab">Published
-                                            Titles</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#pilot" data-bs-toggle="tab">Pilot Titles</a>
-                                    </li>
-                                </ul>
-                                <div class="tab-content">
-                                    <div id="published" class="tab-pane active">
-                                        <div class="container-fluid">
-                                            <div class="row">
-                                                <div class="my-5 col-lg-12 col-yellow">
-                                                    <div class="catalog-item-wrap reveal fade-left">
-                                                        <span class="catalog-title">CODE<br>HELIX</span>
-                                                        <span class="catalog-author">by Nikki Dibya Wardhana,<br>Bryan
-                                                            Arfiandy</span>
-                                                        <button class="btn btn-black" type="button">
-                                                            <a href="single-published.html">
-                                                                More Info <span class="glyphicon glyphicon-play"></span>
-                                                            </a>
-                                                        </button>
-                                                    </div>
-                                                    <div class="catalog-img-wrap reveal fade-right">
-                                                        <img src="img/catalog-2.png">
-                                                    </div>
-                                                </div>
-                                                <div class="my-5 col-lg-12 col-yellow">
-                                                    <div class="catalog-item-wrap reveal fade-left">
-                                                        <span class="catalog-title">LOREM<br>IPSUM DOLOR</span>
-                                                        <span class="catalog-author">by Lorem Ipsum</span>
-                                                        <button class="btn btn-black" type="button">
-                                                            <a href="single-published.html">
-                                                                More Info <span class="glyphicon glyphicon-play"></span>
-                                                            </a>
-                                                        </button>
-                                                    </div>
-                                                    <div class="catalog-img-wrap reveal fade-right">
-                                                        <img src="img/catalog-1.png">
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div id="pilot" class="tab-pane">
-                                        <div class="container-fluid reveal fade-bottom">
-                                            <div class="row">
-                                                <div class="col-lg-3">
-                                                    <a href="single-pilot.html">
-                                                        <div class="pilot-post col-yellow">
-                                                            <img src="img/pilot-2.png">
-                                                        </div>
-                                                        <div class="pilot-title-wrap">
-                                                            <p class="title">lorem ipsum</p>
-                                                            <p class="author">by lorem </p>
-                                                        </div>
-                                                    </a>
-                                                </div>
-                                                <div class="col-lg-3">
-                                                    <a href="single-pilot.html">
-                                                        <div class="pilot-post col-yellow">
-                                                            <img src="img/pilot-2.png">
-                                                        </div>
-                                                        <div class="pilot-title-wrap">
-                                                            <p class="title">lorem ipsum</p>
-                                                            <p class="author">by lorem </p>
-                                                        </div>
-                                                    </a>
-                                                </div>
-                                                <div class="col-lg-3">
-                                                    <a href="single-pilot.html">
-                                                        <div class="pilot-post col-yellow">
-                                                            <img src="img/pilot-2.png">
-                                                        </div>
-                                                        <div class="pilot-title-wrap">
-                                                            <p class="title">lorem ipsum</p>
-                                                            <p class="author">by lorem </p>
-                                                        </div>
-                                                    </a>
-                                                </div>
-                                                <div class="col-lg-3">
-                                                    <a href="single-pilot.html">
-                                                        <div class="pilot-post col-yellow">
-                                                            <img src="img/pilot-2.png">
-                                                        </div>
-                                                        <div class="pilot-title-wrap">
-                                                            <p class="title">lorem ipsum</p>
-                                                            <p class="author">by lorem </p>
-                                                        </div>
-                                                    </a>
-                                                </div>
-                                                <div class="col-lg-3">
-                                                    <a href="single-pilot.html">
-                                                        <div class="pilot-post col-yellow">
-                                                            <img src="img/pilot-2.png">
-                                                        </div>
-                                                        <div class="pilot-title-wrap">
-                                                            <p class="title">lorem ipsum</p>
-                                                            <p class="author">by lorem </p>
-                                                        </div>
-                                                    </a>
-                                                </div>
-                                                <div class="col-lg-3">
-                                                    <a href="single-pilot.html">
-                                                        <div class="pilot-post col-yellow">
-                                                            <img src="img/pilot-2.png">
-                                                        </div>
-                                                        <div class="pilot-title-wrap">
-                                                            <p class="title">lorem ipsum</p>
-                                                            <p class="author">by lorem </p>
-                                                        </div>
-                                                    </a>
-                                                </div>
-                                                <div class="col-lg-3">
-                                                    <a href="single-pilot.html">
-                                                        <div class="pilot-post col-yellow">
-                                                            <img src="img/pilot-2.png">
-                                                        </div>
-                                                        <div class="pilot-title-wrap">
-                                                            <p class="title">lorem ipsum</p>
-                                                            <p class="author">by lorem </p>
-                                                        </div>
-                                                    </a>
-                                                </div>
-                                                <div class="col-lg-3">
-                                                    <a href="single-pilot.html">
-                                                        <div class="pilot-post col-yellow">
-                                                            <img src="img/pilot-2.png">
-                                                        </div>
-                                                        <div class="pilot-title-wrap">
-                                                            <p class="title">lorem ipsum</p>
-                                                            <p class="author">by lorem </p>
-                                                        </div>
-                                                    </a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
+            <section>
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="py-5" style="height: auto; background: url(img/slider-kosmik-1.jpg); background-size: cover;">
+                            <div class="banner-desc-wrapper">
+                                <div class="published-title-wrapper">
+                                    <h1>
+                                        FLUFFY TUMMY
+                                    </h1>
+                                    <h4 style="font-weight: normal;">
+                                        by Bimo Eka Saputra, Yachi_Chan
+                                    </h4>
+                                </div>
+                                <div class="published-title-cta">
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam iaculis nunc
+                                        tortor, sed condimentum nibh aliquet a. Aliquam et aliquam massa, et
+                                        ullamcorper nibh. Mauris nec sapien non lectus mattis vulputate et ac lacus.
+                                        Maecenas pellentesque faucibus tincidunt. Proin quam dolor, ultricies ac
+                                        augue ut, scelerisque aliquam justo. Praesent neque mi, pellentesque eget
+                                        massa ac, lobortis pellentesque dui. Suspendisse consectetur lacinia
+                                        ullamcorper. Quisque tristique mauris tortor, sit amet laoreet enim
+                                        facilisis id. Cras malesuada vehicula urna, et maximus nisi tincidunt nec.
+                                        Proin ante augue, congue non viverra sed, consequat elementum arcu. Fusce
+                                        vitae dui augue.
+                                    </p>
+
+                                    <button class="btn btn-primary yellow" style="margin-right: 1em">
+                                        EN <span class="glyphicon glyphicon-play"></span>
+                                    </button>
+                                    <button class="btn btn-primary yellow">
+                                        ID <span class="glyphicon glyphicon-play"></span>
+                                    </button>
+
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </section>
+            <section class="py-5">
+                
+                <div class="single-pilot-desc">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-lg-3 text-center reveal fade-left">
+                                <div class="col-yellow py-3 single-paragraph">
+                                    <h5 class="mb-0 mt-2">
+                                        GENRE
+                                    </h5>
+                                    <p>
+                                        Slice of Life
+                                    </p>
+                                    <h5 class="mb-0 mt-2">
+                                        ENGAGEMENT
+                                    </h5>
+                                    <p>
+                                        4,000,000 views
+                                    </p>
+                                    <h5 class="mb-0 mt-2">
+                                        RELEASE
+                                    </h5>
+                                    <p>
+                                        2021 - now
+                                    </p>
+                                    <h5 class="mb-0 mt-2">
+                                        FORMAT
+                                    </h5>
+                                    <p>
+                                        Digital, Paperback
+                                    </p>
+                                </div>
+
+                            </div>
+                            <div class="col-lg-9 reveal fade-right single-paragraph">
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam
+                                    iaculis nunc tortor, sed condimentum nibh aliquet a. Aliquam et
+                                    aliquam massa, et ullamcorper nibh. Mauris nec sapien non lectus
+                                    mattis vulputate et ac lacus. Maecenas pellentesque faucibus
+                                    tincidunt. Proin quam dolor, ultricies ac augue ut, scelerisque
+                                    aliquam justo. Praesent neque mi, pellentesque eget massa ac,
+                                    lobortis pellentesque dui. Suspendisse consectetur lacinia
+                                    ullamcorper. Quisque tristique mauris tortor, sit amet laoreet enim
+                                    facilisis id. Cras malesuada vehicula urna, et maximus nisi
+                                    tincidunt nec. Proin ante augue, congue non viverra sed, consequat
+                                    elementum arcu. Fusce vitae dui augue.
+                                </p>
+                                <p>
+                                    Maecenas placerat finibus lacus, vel consectetur arcu pretium
+                                    scelerisque. Mauris sit amet iaculis tellus. Curabitur sit amet nunc
+                                    vitae sapien varius scelerisque at id ipsum. Pellentesque aliquam
+                                    odio libero, et mollis ante ornare eget. Fusce commodo odio id
+                                    lobortis scelerisque. Aenean sed dictum felis. Pellentesque sed
+                                    placerat velit, hendrerit vestibulum justo. Donec tristique ligula
+                                    et urna venenatis, ut tristique mi efficitur. Donec et dictum
+                                    lectus. Donec et sem non elit convallis congue vitae id diam. Nunc
+                                    urna sapien, gravida ut congue eget, blandit a urna. Integer laoreet
+                                    nulla sed turpis ullamcorper interdum. Pellentesque in arcu dapibus,
+                                    egestas mi quis, ultricies felis. Curabitur non leo ut lacus rhoncus
+                                    tempor id sit amet nisi.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
         </main>
 
         <footer id="footer" class="footer-texts-more-lighten">
